# url-shortener

./: .gitignore  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3071469ba9b9_link_urls_to_users.py  44b46aefa8e7_create_url_table.py  557166d25e79_create_url_table.py  6db8006f74d8_create_url_table.py  70d1ca1b3168_create_user_table.py  747e5d226fa4_create_url_table.py  77c5ab9c060e_create_url_table.py  bd18e3778cd2_make_timestamps_tz_aware.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  urls.py  users.py
backend/app/core/: config.py  security.py  utils.py
backend/app/db/: session.py
backend/app/models/: __init__.py  url.py  user.py
backend/app/schemas/: __init__.py  auth.py  url.py
backend/app/services/: __init__.py  jwt.py  slug.py  url_service.py  user_service.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: main.tsx
frontend/src/app/: api.ts  router.ts
frontend/src/app/hooks/: useAuth.ts
frontend/src/app/layout/: MainLayout.tsx
frontend/src/app/providers/: AuthContext.tsx  AuthProvider.tsx  QueryProvider.tsx
frontend/src/features/auth/: AuthLayout.tsx  model.ts
frontend/src/features/auth/components/: AuthForm.tsx  AuthNavigation.tsx  Guards.tsx
frontend/src/features/auth/hooks/: useLogin.ts  useLogout.ts  useSignup.ts
frontend/src/features/auth/pages/: LoginPage.tsx  SignupPage.tsx
frontend/src/features/common/components/: NavigationMenu.tsx
frontend/src/features/home/: model.ts
(+5 files in other folders)
